--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: flotsam
-Title: Fast LOcal Tangent Space Alignment Method
+Title: Finicky LOcal Tangent Space Alignment Method
 Version: 0.0.0.9000
 Authors@R: 
     person("James", "Melville", , "jlmelville@gmail.com", role = c("aut", "cre"))
@@ -7,22 +7,18 @@ Description: Implements the LTSA method of Zhang and Zha (2004) <doi:10.1137/S10
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.3.2
 URL: https://github.com/jlmelville/flotsam
 BugReports: https://github.com/jlmelville/flotsam/issues
 Depends:
     Matrix
 LinkingTo: 
     cpp11
-SystemRequirements: C++11
 Imports: 
     rnndescent (>= 0.0.10),
     irlba,
     RSpectra,
-    stats,
     methods
-Remotes: 
-    jlmelville/rnndescent
 Suggests: 
     covr,
     testthat (>= 3.0.0)
